# ada4ros2

./: .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  README.md  ROADMAP.md  ada4ros2.gpr  ada4ros2.repos  ada4ros2part.gpr  docs  fosdem20-launch  printenv_ada  rclada  rclada_project.gpr  ros2deps.txt
.github/workflows/: build.yml  ci-foxy.yml  ci-lts.yml
clion/: CMakeLists.txt
dev/: CMakeLists.txt  README.txt  build-package.sh  clean-package.sh  clean.sh  del_autobindings.sh  devtut.gpr  edit-tf2.sh  gendoc.sh  gnatstudio  make-package.sh  make.sh  monitoring.perspective  overrides-review.bash  setup.bash  tf2dev.gpr  uberclean.sh  update.sh
doc/: java_example_depends.graphml  java_example_depends_lite.graphml  rclada_api.gpr  rclada_depends.graphml  typesupport_macros.graphml
doc/AUJ/: build-deps.graphml  code-deps.graphml
doc/gnatdoc/: index.js  index.md  inheritance_index.js  source_file_index.js
docs/: documentation_index.js  entities_categories_index.js  index.js
docs/docs/: aaa___spec.html  aaa___spec.js  aaa__caches___spec.html  aaa__caches___spec.js  aaa__caches__files___spec.html  aaa__containers___spec.html  aaa__containers__indefinite_holders___spec.html  aaa__containers__indefinite_holders___spec.js  aaa__debug___spec.html  aaa__filesystem___spec.html  aaa__filesystem___spec.js  aaa__processes___spec.html  aaa__strings___maps___spec.js  aaa__strings___sets___spec.js  aaa__strings___spec.html  aaa__strings___spec.js  aaa__strings___vectors___spec.js  aaa__table_io___spec.html  aaa__table_io___spec.js  aaa__tests___spec.html  aaa__text_io___spec.js  aaa__traits___spec.js  aaa__traits__types___spec.html  aaa__traits__types___spec.js  action_msgs_msg_detail_goal_info_ustruct_h___spec.html  action_msgs_msg_detail_goal_status_array_ustruct_h___spec.html  action_msgs_msg_detail_goal_status_array_ustruct_h___spec.js  action_msgs_msg_detail_goal_status_ustruct_h___spec.html  action_msgs_msg_detail_goal_status_ustruct_h___spec.js  ament___spec.js  builtin_interfaces_msg_detail_duration_ufunctions_h___spec.html  builtin_interfaces_msg_detail_duration_urosidl_typesupport_fastrtps_c_h___spec.html  builtin_interfaces_msg_detail_duration_urosidl_typesupport_introspection_c_h___spec.html  builtin_interfaces_msg_detail_duration_ustruct_h___spec.html  builtin_interfaces_msg_detail_duration_utype_support_h___spec.html  builtin_interfaces_msg_detail_time_ufunctions_h___spec.html  builtin_interfaces_msg_detail_time_ufunctions_h___spec.js  builtin_interfaces_msg_detail_time_urosidl_typesupport_fastrtps_c_h___spec.html  builtin_interfaces_msg_detail_time_urosidl_typesupport_fastrtps_c_h___spec.js  (+444 more)
docs/entities/: access_types.js  (+6 more)
notes/: cmake.txt
scripts/: fosdem20-launch
src/ament_gprbuild/: package.xml
src/my_ada_package_completed/: CMakeLists.txt  package.xml
src/my_ada_package_completed/ada_code/: default.gpr
src/rclada/: CMakeLists.txt  README.md  package.xml  rcl.gpr  rcladaConfig.cmake.in  rcladaConfigVersion.cmake.in
src/rclada/cmake/: rcladaConfig.cmake.in  rclada_project.cmake
src/rclada/dev/: librcl.gpr  librcutils.gpr
src/rclada/gpr_rcl/: rcl.gpr
src/rclada/gpr_rcl/src/: rcl-errors.ads  rcl-logging.adb  rcl-logging.ads  rcl-nodes.ads  rcl-subscriptions.adb  rcl-subscriptions.ads  rcl-utils.ads  rcl.adb  rcl.ads
src/rclada/gpr_rcl/src/overrides/: rcl_allocator_h.ads
src/rclada/gpr_rcl/src/support/: README.md  stdarg_h.ads
src/rclada/gpr_rcl/src/support/unused/: rclx-rcutils_allocator_h.ads  rclx-rcutils_time_h.ads
src/rclada/src/: rcl-errors.ads  rcl-logging.adb  rcl-logging.ads  rcl-nodes.adb  rcl-nodes.ads  rcl-subscriptions.adb  rcl-subscriptions.ads  rcl-utils.adb  rcl.adb  rcl.ads  rclada_c.c
src/rclada/src/experimental/: ada_typesupport.c  rcl-imports.ads
src/rclada/src/overrides/: rclx-rcl_allocator_h.ads
src/rclada/src/support/: rclx-rcutils_types_rcutils_ret_h.ads  rclx-rosidl_generator_c_message_type_support_struct_h.ads  rclx-rosidl_generator_c_service_type_support_struct_h.ads  rclx-stdarg_h.ads  rclx-stddef_h.ads  rclx-x86_64_linux_gnu_bits_stdint_intn_h.ads  rclx-x86_64_linux_gnu_bits_stdint_uintn_h.ads  rclx.ads
src/rclada/src/support/unused/: rclx-rcutils_types_string_array_h.ads  rclx-rmw_types_h.ads
src/rclada/support/: external_lib.gpr.in  librcl.gpr.in
src/rclada_common/: CMakeLists.txt  package.xml  rclada_commonConfig.cmake.in
src/rclada_common/cmake/: ada_project.cmake  rclada_commonConfig.cmake.in
src/rclada_common/gpr_c_builtins/: c_builtins.gpr
src/rclada_common/gpr_c_builtins/src/: stddef_h.ads
src/rclada_common/resources/: external_c_lib.gpr.in  rclada_fake_target.c
src/rclada_examples/: CMakeLists.txt  examples.gpr  package.xml
src/rclada_examples/cmake/: rclada_examplesConfig.cmake.in
src/rclada_examples/src/: c_listener.c  listener.adb  listener_raw.adb
src/rosidl_generator_ada/: CMakeLists.txt  package.xml
src/rosidl_generator_ada/cmake/: rosidl_generator_adaConfig.cmake.in
src/rosidl_generator_ada/gpr_c_typesupport/: c_typesupport.gpr
src/rosidl_generator_ada/gpr_c_typesupport/src/overrides/: rosidl_generator_c_message_type_support_struct_h.ads  rosidl_generator_c_service_type_support_struct_h.ads
src/rosidl_generator_ada/gpr_rosidl/: rosidl.gpr
src/rosidl_generator_ada/gpr_rosidl/src/: rosidl-messages.ads  rosidl-types.ads  rosidl.ads
src/rosidl_generator_ada/resources/: ada_msg_typesupport.c
src/rosidl_generator_ada/resources/ada_base_project/: rosidl.ads  rosidl.gpr
src/rosidl_generator_ada/resources/ada_base_project/src/support/: rosidl_generator_c-stddef_h.ads  rosidl_generator_c-x86_64_linux_gnu_bits_stdint_intn_h.ads  rosidl_generator_c-x86_64_linux_gnu_bits_stdint_uintn_h.ads  rosidl_generator_c.ads
src/rosidl_generator_ada/resources/ada_typesupport_project/: ada_typesupport_std_msgs_msg_strings.c  rosidl_rospkg.gpr  rosidl_std_msgs.ads
src/rosidl_generator_ada/resources/ada_typesupport_std_msgs/: ada_typesupport_std_msgs_msg_strings.c  c_rosidl_typesupport_c.gpr  c_rosidl_typesupport_std_msgs.gpr  rosidl-std_msgs.ads  rosidl_std_msgs.gpr
(+780 files in other folders)
