cmake_minimum_required(VERSION 3.5)
#add_subdirectory(ada4ros2/src/rclada)
add_subdirectory(ada4ros2/src/rclada_common)
#add_subdirectory(ada4ros2/src/rclada_examples)
#add_subdirectory(ada4ros2/src/rosidl_generator_ada)

#add_subdirectory(ros2_rolling/src/ros2/rcl/rcl)
#add_subdirectory(ros2_rolling/src/ros2/rcl_interfaces/rcl_interfaces)
#add_subdirectory(ros2_rolling/src/ros2/rcutils)
