<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclada_common</name>
  <version>0.1.0</version>
  <description>Common resources for Ada projects</description>
  <maintainer email="alejandro@mosteo.com">Alejandro R Mosteo</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>gprbuild</buildtool_depend>
  <buildtool_depend>gnat</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
