<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_generator_ada</name>
  <version>0.1.0</version>
  <description>Generate the ROS interfaces in Ada</description>
  <maintainer email="amosteo@unizar.es">Alejandro R. Mosteo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>rclada_common</build_depend>

  <!-- for the rosidl_message_type_support_t struct and visibility macros -->
  <build_depend>rosidl_generator_c</build_depend>


  <export>
    <build_type>cmake</build_type>
  </export>
</package>
